# gluey

./: CMakeLists.txt  README.md
src/: context.h  gluey.cpp
src/hooks/: hook_block_ffs.h
src/hooks/egl/: egl_init.cpp  hook_pfn.h
src/hooks/gl/: gl_init.cpp  hook_pfn.h
tools/: genapi.py  genheaders.py  genperfmon.py  reg.py
tools/api/: shim.py  xmacro.py
xml/khronos/: README.md
